overnote shows up on the screen. no implementation yet.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <uses-sdk android:minSdkVersion="19"/>
 
     <application android:label="@string/app_name"
@@ -16,5 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service android:name=".ui.OverNoteService" />
     </application>
 </manifest>
