--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,14 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <!-- needed for reading the file system -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-sdk android:minSdkVersion="19"/>
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".ui.BrowserActivity"
                   android:label="@string/app_name"
                   android:theme="@style/AppTheme">
             <intent-filter>
