--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,20 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.NoteActivity"
+                  android:theme="@style/AppTheme"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="file" />
+                <data android:mimeType="*/*" />
+                <data android:pathPattern=".*\\.kdb" />
+                <data android:host="*" />
+            </intent-filter>
+        </activity>
+
         <service android:name=".service.OverNoteService" />
     </application>
 </manifest>
