more with alarms, they are now canceled when the class is deleted. they are also rescheduled, but need to be incremented still before that reschedule

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,5 +40,6 @@
         </activity>
 
         <service android:name=".service.OverNoteService"/>
+        <service android:name=".service.OverNoteKiller"/>
     </application>
 </manifest>
